--- a/views/index.erb
+++ b/views/index.erb
@@ -24,18 +24,19 @@
       </div> %>
       <%# <script src="/assets/javascript/particles.js"></script> %>
     </div>
-<div class="index-main">
+
     <div class="date">
      <p class="main-date">9.23</p>
      <p class="sub-date">9:00~15:00</p>
     </div>
-
-<div class="count-div1">
-    <div class="count-countdown">
-    <span id="countdown"></span>
-    </div>
+<div class="count">
+  <div class="count-div1">
+      <div class="count-countdown">
+      <span id="countdown"></span>
+      </div>
+  </div>
 </div>
-
+<div class="index-main">
 <div class="note">
   <h2>お知らせ</h2>
   <h1>呼び出し・問い合わせ</h1>
