スマホ用デザイン一部追加

--- a/public/assets/css/circle.css
+++ b/public/assets/css/circle.css
@@ -180,3 +180,22 @@ width: 48%;
     font-size: 30px;
     color: #e0e0e0;
 }
+
+@media screen and (min-width: 481px){
+    
+ }
+@media screen and (max-width: 480px){
+    .layout-nav{
+        display:none;
+    }
+    .yield-main{
+        margin-top: 0px;
+    }
+    .toptitle p {
+        line-height: 5vh;
+        font-family: "makinas-4-square";
+        font-size: 25px;
+        margin-top: 4px;
+        letter-spacing: 0.1em;
+    }
+}
