--- a/views/layout.erb
+++ b/views/layout.erb
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=”viewport” content=”width=device-width,initial-scale=1.0″>
+    <meta name=”viewport” content=”width=device-width,initial-scale=1″>
     <link rel="stylesheet" href="/assets/css/access.css">
     <link rel="stylesheet" href="/assets/css/circle.css">
     <link rel="stylesheet" href="/assets/css/message.css">
