スマホ用追加

--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -132,17 +132,137 @@ footer{
   text-align: center;
   font-size: 12px;
 }
-/* ハンバーガーメニュー */
-#humMenu {
-  padding: 12px;
-  background: white;
-  display: none;
+
+.hamburger {
+  display : none;
+  position: fixed;
+  z-index : 10001;
+  left : 13px;
+  top   : 12px;
+  width : 42px;
+  height: 42px;
+  cursor: pointer;
+  text-align: center;
+  overflow: visible;
 }
-#humCheck, #humClose { display:none; }
-#humOpen {
+.hamburger span {
+  display : block;
+  position: absolute;
+  width   : 30px;
+  height  : 2px ;
+  left    : 6px;
+  background : white;
+  -webkit-transition: 0.3s ease-in-out;
+  -moz-transition   : 0.3s ease-in-out;
+  transition        : 0.3s ease-in-out;
+}
+.hamburger span:nth-child(1) {
+  top: 10px;
+}
+.hamburger span:nth-child(2) {
+  top: 20px;
+}
+.hamburger span:nth-child(3) {
+  top: 30px;
+}
+
+/* ナビ開いてる時のボタン */
+.hamburger.active {
+  -webkit-transition: all 0.3s ease-in-out;
+  -o-transition     : all 0.3s ease-in-out;
+  transition        : all 0.3s ease-in-out;
+  -webkit-transition-delay: 0.6s;
+  -o-transition-delay     : 0.6s;
+  transition-delay        : 0.6s;
+  -webkit-transform: rotate(45deg);
+  -ms-transform    : rotate(45deg);
+  -o-transform     : rotate(45deg);
+  transform        : rotate(45deg);
+}
+.hamburger.active span:nth-child(2){
+  width: 0px;
+}
+.hamburger.active span:nth-child(1),
+.hamburger.active span:nth-child(3){
+  background :#fff;
+  -webkit-transition-delay: 0.3s;
+  -o-transition-delay: 0.3s;
+  transition-delay: 0.3s;
+}
+.hamburger.active span:nth-child(1){
+  -webkit-transform: translateY(4px);
+  -ms-transform    : translateY(4px);
+  -o-transform     : translateY(4px);
+  transform        : translateY(4px);
+}
+
+.hamburger.active span:nth-child(3){
+  -webkit-transform: translateY(-16px) rotate(90deg);
+  -ms-transform: translateY(-16px) rotate(90deg);
+  -o-transform : translateY(-16px) rotate(90deg);
+  transform    : translateY(-16px) rotate(90deg);
+}
+
+
+nav.globalMenuSp {
+  position: fixed;
+  z-index : 10000;
+  top  : 0;
+  left : 0;
+  color: #fff;
+  background: rgba(128,128,128,0.8);
+  text-align: center;
+  width: 100%;
+  opacity: 0;
+  transition: opacity .6s ease, visibility .6s ease;
+  height:100vh;
+  padding-top:100px;
+}
+
+nav.globalMenuSp ul {
+  margin: 0 auto;
+  padding: 0;
+  width: 100%;
+}
+
+nav.globalMenuSp ul li {
+  list-style-type: none;
+  padding: 0;
+  width: 100%;
+  transition: .4s all;
+}
+nav.globalMenuSp ul li:last-child {
+  padding-bottom: 0;
+}
+nav.globalMenuSp ul li:hover{
+  background :#ddd;
+}
+
+nav.globalMenuSp ul li a {
   display: block;
+  color: #fff;
+  padding: 0.3rem 0;
+  text-decoration :none;
+  text-align: center;
+  width: 100vw;
+  font-size:2rem;
+  font-weight:700;
+  text-shadow: #d9d9d9 0 0 10px;
+}
+
+/* このクラスを、jQueryで付与・削除する */
+nav.globalMenuSp.active {
+  opacity: 100;
+}
+
+
+/* ハンバーガーメニュー */
+/* #humCheck, #humClose { display:none; }
+#humOpen {
+  display: none;
   width: 58px;
   cursor: pointer;
+  z-index:30;
 }
 #humOpen:hover {
   opacity: 0.5;
@@ -187,7 +307,7 @@ nav li a{
   font-size: 20px;
   text-decoration: none;
   color: black;
-}
+} */
 /* ここまで */
 .coming{
   display: block;
@@ -214,4 +334,10 @@ nav li a{
        margin-top: 4px;
        letter-spacing: 0.1em;
    }
+  .yield-main{
+    top:0;
+  }
+  .hamburger{
+    display:block;
+  }
 }
