--- a/views/message.erb
+++ b/views/message.erb
@@ -1,4 +1,5 @@
 <script src="/assets/javascript/message.js"></script>
+<link rel="stylesheet" href="/assets/css/message.css">
 <script>
       (function(d) {
         var config = {
@@ -9,6 +10,19 @@
         h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
       })(document);
     </script>
+  <script>
+    $(function() {
+  $('.hamburger').click(function() {
+      $(this).toggleClass('active');
+
+      if ($(this).hasClass('active')) {
+          $('.globalMenuSp').addClass('active');
+      } else {
+          $('.globalMenuSp').removeClass('active');
+      }
+  });
+});
+</script>
 <div class="title-main">
   <img src="/assets/images/titles/message.webp" class="title-img">
 </div>
