メイン画面仮完成

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,12 +29,12 @@
       </div>
       <nav class="globalMenuSp">
           <ul>
-              <li><a href="/"><p class="lia">Home</p></a></li>
-              <li><a href="/message">Message</a></li>
-              <li><a href="access">Access</a></li>
-              <li><a href="timetable">Timetable</a></li>
-              <li><a href="circle">Circle</a></li>
-              <li><a href="member">Member</a></li>
+              <li><a href="/" class="none"><p class="lia">Home</p></a></li>
+              <li><a href="/message" class="none">Message</a></li>
+              <li><a href="/access"class="none">Access</a></li>
+              <li><a href="/timetable"class="none">Timetable</a></li>
+              <li><a href="/circle" class="none">Circle</a></li>
+              <li><a href="/member" class="none">Member</a></li>
           </ul>
       </nav>
   </header>
