--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -239,7 +239,7 @@ nav.globalMenuSp ul li:hover{
 }
 
 nav.globalMenuSp ul li a {
-  display: block;
+  display: none;
   color: #fff;
   padding: 0.3rem 0;
   text-decoration :none;
@@ -253,6 +253,9 @@ nav.globalMenuSp ul li a {
 /* このクラスを、jQueryで付与・削除する */
 nav.globalMenuSp.active {
   opacity: 100;
+}
+.none.active{
+  display:block;
 }
 
 
