--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -213,3 +213,51 @@ html,body{
   width:70%;
   margin:0 auto;
 }
+@media screen and (max-width: 480px){
+  .logo{
+    height: 12rem;
+    width: 24rem;
+  }
+
+  .logo-gif{
+    height: 12rem;
+    width: 24rem;
+  }
+  .image{
+    height: 12rem;
+    width: 24rem;
+  }
+  #wrapper{
+    height:25rem
+  }
+  .date{
+    margin-top:2rem;
+  }
+  .main-date {
+    font-size: 150px;
+    line-height: 100px;
+  }
+  .sub-date {
+    font-size: 40px;
+  }
+  .count-div1{
+  height: 240px;
+    margin: 0 auto;
+    width: 380px;
+  }
+  .count{
+    width:100%;
+  }
+  .count-countdown {
+    font-size: 40px;
+    color: #05c8e6;
+    width: 800px;
+    height: 100px;
+    text-align: center;
+    position: absolute;
+    top: 53%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    text-shadow: #d9d9d9 0 0 10px;
+}
+}
