--- a/views/access.erb
+++ b/views/access.erb
@@ -16,8 +16,10 @@
 
       if ($(this).hasClass('active')) {
           $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
       } else {
           $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
       }
   });
 });
