--- a/views/member.erb
+++ b/views/member.erb
@@ -15,8 +15,10 @@
 
       if ($(this).hasClass('active')) {
           $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
       } else {
           $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
       }
   });
 });
