--- a/views/message.erb
+++ b/views/message.erb
@@ -11,14 +11,16 @@
       })(document);
     </script>
   <script>
-    $(function() {
+   $(function() {
   $('.hamburger').click(function() {
       $(this).toggleClass('active');
 
       if ($(this).hasClass('active')) {
           $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
       } else {
           $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
       }
   });
 });
