--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -181,6 +181,7 @@ html,body{
   top: 46%;
   left: 50%;
   transform: translate(-50%,-50%);
+  text-shadow: #d9d9d9 0 0 10px;
   /* padding: 2px auto; */
 }
 
