--- a/views/ongakukai.erb
+++ b/views/ongakukai.erb
@@ -1,3 +1,16 @@
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VBWLSF46BW', {
+    'linker' : {
+      'domains': ['koyo-onten.net', '2023.koyo-onten.net']
+    }
+  });
+</script>
 <script>
       (function(d) {
         var config = {
@@ -22,6 +35,6 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">今年の音楽会は、例年通りの個人演奏に加えて、4年ぶりに合唱コンクールを芸術選択関係なしに行います。<br>この合唱コンクールでは、クラス一丸となって休み時間や放課後の時間を削って練習に励んだ成果をどうかお聴きください。 　また、個人演奏も、オーディションを勝ち抜いた生徒たちが、素晴らしい演奏を届けてくれることでしょう。 　さらに、その後にはグリー部による合唱とアンサンブル部による合奏までございますので、ぜひ最後までお聴きください。</p>
+   <p class="circle-text">今年の音楽会は、例年通りの個人演奏に加えて、4年ぶりに合唱コンクールを芸術選択関係なしに行います。<br>この合唱コンクールでは、クラス一丸となって休み時間や放課後の時間を削って練習に励んだ成果をどうかお聴きください。　また、個人演奏も、オーディションを勝ち抜いた生徒たちが、素晴らしい演奏を届けてくれることでしょう。　さらに、その後にはグリー部による合唱とアンサンブル部による合奏までございますので、ぜひ最後までお聴きください。</p>
 
 </div>
