--- a/views/kissa.erb
+++ b/views/kissa.erb
@@ -1,4 +1,17 @@
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
 <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VBWLSF46BW', {
+    'linker' : {
+      'domains': ['koyo-onten.net', '2023.koyo-onten.net']
+    }
+  });
+</script><script>
       (function(d) {
         var config = {
           kitId: 'bsw3okh',
