--- a/views/message.erb
+++ b/views/message.erb
@@ -1,4 +1,17 @@
 <script src="/assets/javascript/message.js"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VBWLSF46BW', {
+    'linker' : {
+      'domains': ['koyo-onten.net', '2023.koyo-onten.net']
+    }
+  });
+</script>
 <link rel="stylesheet" href="/assets/css/message.css">
 <script>
       (function(d) {
