--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
-<script>
+<%# <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -10,7 +10,7 @@
       'domains': ['koyo-onten.net', '2023.koyo-onten.net']
     }
   });
-</script>
+</script> %>
     <script>
       (function(d) {
         var config = {
