--- a/public/assets/css/message.css
+++ b/public/assets/css/message.css
@@ -23,3 +23,9 @@
     margin: 20px auto;
     font-family: "makinas-4-square";
 }
+@media screen and (max-width: 480px){
+    .message h2{
+        font-size: 1.6rem;
+        width: 100%;
+    }
+}
