--- a/public/assets/css/member.css
+++ b/public/assets/css/member.css
@@ -18,6 +18,7 @@ td {
   text-align: left;
   font-size: 16px;
   padding-right:2px;
+  color: #ffffff;
 }
 
 #members_h2 {
@@ -26,5 +27,20 @@ td {
   padding: 20px 0 10px 0 ;
   
 
+}
+@media screen and (max-width: 480px){
+  #members_table{
+    margin: 0 10% ;
+    }
+    td {
+      font-family: "makinas-4-square";
+      text-align: left;
+      font-size: 16px;
+      padding-right:2px;
+      color: #ffffff;
+      min-width: 120px;
+      padding-bottom:10px;
+      vertical-align: top;
+    }
 }
 
