--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,6 @@
    <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VBWLSF46BW"></script>
-<%# <script>
+<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
@@ -10,7 +10,7 @@
       'domains': ['koyo-onten.net', '2023.koyo-onten.net']
     }
   });
-</script> %>
+</script>
     <script>
       (function(d) {
         var config = {
@@ -33,9 +33,6 @@
         <img src="/assets/images/logo_white.webp" class="logo">
         <img src="/assets/images/logo_background.gif" class="logo-gif">
       </div>
-      <%# <div id="particles-js">
-      </div> %>
-      <%# <script src="/assets/javascript/particles.js"></script> %>
     </div>
 
     <div class="date">
@@ -79,3 +76,18 @@
 </div>
 
 </div>
+<script>
+$(function() {
+  $('.hamburger').click(function() {
+      $(this).toggleClass('active');
+
+      if ($(this).hasClass('active')) {
+          $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
+      } else {
+          $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
+      }
+  });
+});
+</script>
