--- a/views/layout.erb
+++ b/views/layout.erb
@@ -114,8 +114,21 @@
   loader.classList.add('loaded');
 }
 </script>
+<script>
+$(function() {
+  $('.hamburger').click(function() {
+      $(this).toggleClass('active');
 
-
+      if ($(this).hasClass('active')) {
+          $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
+      } else {
+          $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
+      }
+  });
+});
+</script>
 <!--<script>-->
 <!--var Element = document.querySelector('#smart');-->
 <!--if(navigator.userAgent.match(/(iPhone|iPad|iPod|Android)/)){-->
