--- a/public/assets/css/message.css
+++ b/public/assets/css/message.css
@@ -22,10 +22,31 @@
     font-size: 1.5rem;
     margin: 20px auto;
     font-family: "makinas-4-square";
+    padding-bottom:2rem;
+}
+h3{
+    display: block;
+    width: 80%;
+    font-size: 1.5rem;
+    margin: 20px auto;
+    font-family: "makinas-4-square";
+
 }
 @media screen and (max-width: 480px){
     .message h2{
-        font-size: 1.6rem;
+        font-size: 1.5rem;
         width: 100%;
+    }
+    .message{
+        width: 90%;
+        margin:0 auto;
+    }
+    h3{
+        display: block;
+        width: 80%;
+        font-size: 1.5rem;
+        margin: 20px auto;
+        font-family: "makinas-4-square";
+
     }
 }
