--- a/views/access.erb
+++ b/views/access.erb
@@ -11,6 +11,21 @@
     }
   });
 </script>
+ <script>
+    $(function() {
+  $('.hamburger').click(function() {
+      $(this).toggleClass('active');
+
+      if ($(this).hasClass('active')) {
+          $('.globalMenuSp').addClass('active');
+          $('.none').addClass('active');
+      } else {
+          $('.globalMenuSp').removeClass('active');
+          $('.none').removeClass('active');
+      }
+  });
+});
+</script>
 <script src="/assets/javascript/access.js"></script>
 <script>
       (function(d) {
@@ -52,7 +67,7 @@
       <li> 例年、北山緑化植物園より「利用者が駐車できない」との苦情があります。植物園への駐車もご遠慮ください </li>
   </ul>
   <div class="googlemap">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.828649975743!2d135.31588377649183!3d34.75990897289869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000f36ab1b8e56b%3A0x41b0ac08629de653!2z55Sy6Zm95a2m6Zmi6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1694713840280!5m2!1sja!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3277.828649975743!2d135.31588377649183!3d34.75990897289869!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000f36ab1b8e56b%3A0x41b0ac08629de653!2z55Sy6Zm95a2m6Zmi6auY562J5a2m5qCh!5e0!3m2!1sja!2sjp!4v1694713840280!5m2!1sja!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="inframe">
     </iframe>
   </div>
   </div>
