--- a/public/assets/css/message.css
+++ b/public/assets/css/message.css
@@ -47,6 +47,9 @@ h3{
         font-size: 1.5rem;
         margin: 20px auto;
         font-family: "makinas-4-square";
-
+    }
+    .message-p{
+        width: 90%;
+        margin:0 auto;
     }
 }
