--- a/views/layout.erb
+++ b/views/layout.erb
@@ -42,7 +42,7 @@
       </div>
       <nav class="globalMenuSp">
           <ul>
-              <li><a href="/" class="none"><p class="lia">Home</p></a></li>
+              <li><a href="/" class="none lia"><p>Home</p></a></li>
               <li><a href="/message" class="none">Message</a></li>
               <li><a href="/access"class="none">Access</a></li>
               <li><a href="/timetable"class="none">Timetable</a></li>
