--- a/public/assets/css/layout.css
+++ b/public/assets/css/layout.css
@@ -383,7 +383,7 @@ nav li a{
     text-shadow: #d9d9d9 0 0 10px;
   }
   .lia{
-    padding-top:100px;
+    margin-top:100px;
   }
   .footer-logo {
     display: block;
