--- a/views/message.erb
+++ b/views/message.erb
@@ -31,25 +31,25 @@
   <div class="message">
     <h3 class="bottom">あいさつ</h2>
     <p class="message-p" > 日露戦争前夜の1903年、第５回内国勧業博覧会が大阪で開催され
-    ました。<br>それまでの同博覧会が物品を集めてＰＲするだけの催しだ
-    ったのに対して、<br>第５回では日本初のメリーゴーラウンドや急流す
-    べりが登場するなど行楽の場としての魅力が発信されました。<br>結果
+    ました。それまでの同博覧会が物品を集めてＰＲするだけの催しだ
+    ったのに対して、第５回では日本初のメリーゴーラウンドや急流す
+    べりが登場するなど行楽の場としての魅力が発信されました。結果
     、過去最多の入場者数を達成する盛会となったそうです。まさに
-    “New ERA”の到来を暗示する博覧会となり、<br>その跡地は「新世界」と
-    呼ばれる歓楽地として発展しました。<br>今回の音展、生徒たちが選んだテーマは“New ERA”。<br>はたして皆
+    “New ERA”の到来を暗示する博覧会となり、その跡地は「新世界」と
+    呼ばれる歓楽地として発展しました。今回の音展、生徒たちが選んだテーマは“New ERA”。はたして皆
     さんに“the dawn of a new era”を感じていただけるでしょうか。
     </p>
     <h2>甲陽学院高等学校校長 今西 昭</h2>
 
-    <p class="message-p">2020年度よりコロナの影響をもろに受けてきた音楽と展覧の会もついに規制なく開催できることをまずは非常に喜ばしく感じております。<br>
-今年のテーマ｢New ERA｣には、委員たちのそのような喜びに加え、元通りではなく音展を一歩前へ進めたい、新たな音展のカタチを築き上げたい、といった熱意が込められています。<br>
+    <p class="message-p">2020年度よりコロナの影響をもろに受けてきた音楽と展覧の会もついに規制なく開催できることをまずは非常に喜ばしく感じております。
+今年のテーマ｢New ERA｣には、委員たちのそのような喜びに加え、元通りではなく音展を一歩前へ進めたい、新たな音展のカタチを築き上げたい、といった熱意が込められています。
 ここ数年のコロナによる音展の数々の労苦も、高く跳ぶための助走であり、緑を保つための間伐に過ぎないと感じていただけるよう、我々も真剣に準備を重ねてまいりましたので、ぜひ新時代の音楽と展覧の会を存分にお楽しみください！！</p>
     <h2>実行副委員長 岡田 一真</h2>
 
-    <p class="message-p">コロナの規制が無くなり、去年が「復興の音展」だったのに対し、今年は「従来の形に戻す音展」と言われました。<br>
-       しかし、テーマを「New ERA」とし、新しいカタチの音展を創りたいと思い、<br>過去の記録の少ない中で新しいことに挑戦してきました。
-      「New ERA」のN が互いに交わることで表した、「双方向」というもうひとつのテーマ。<br>
-       来てくれた方を楽しませるのはもちろんのこと、甲陽生も楽しみながらという思いを込めました。<br>
+    <p class="message-p">コロナの規制が無くなり、去年が「復興の音展」だったのに対し、今年は「従来の形に戻す音展」と言われました。
+       しかし、テーマを「New ERA」とし、新しいカタチの音展を創りたいと思い、過去の記録の少ない中で新しいことに挑戦してきました。
+      「New ERA」のN が互いに交わることで表した、「双方向」というもうひとつのテーマ。
+       来てくれた方を楽しませるのはもちろんのこと、甲陽生も楽しみながらという思いを込めました。
        今日は「New ERA｣な音展を感じながら、楽しんで行ってください！！<br>
 コロナという暗がりからの「夜明け」を経て、僕達は「新時代」への第一歩となる</p>
     <h2>実行副委員長 田中 新之助</h2>
