--- a/views/message.erb
+++ b/views/message.erb
@@ -44,7 +44,7 @@
     <p class="message-p">2020年度よりコロナの影響をもろに受けてきた音楽と展覧の会もついに規制なく開催できることをまずは非常に喜ばしく感じております。
 今年のテーマ｢New ERA｣には、委員たちのそのような喜びに加え、元通りではなく音展を一歩前へ進めたい、新たな音展のカタチを築き上げたい、といった熱意が込められています。
 ここ数年のコロナによる音展の数々の労苦も、高く跳ぶための助走であり、緑を保つための間伐に過ぎないと感じていただけるよう、我々も真剣に準備を重ねてまいりましたので、ぜひ新時代の音楽と展覧の会を存分にお楽しみください！！</p>
-    <h2>実行副委員長 岡田 一真</h2>
+    <h2>実行委員長 岡田 一真</h2>
 
     <p class="message-p">コロナの規制が無くなり、去年が「復興の音展」だったのに対し、今年は「従来の形に戻す音展」と言われました。
        しかし、テーマを「New ERA」とし、新しいカタチの音展を創りたいと思い、過去の記録の少ない中で新しいことに挑戦してきました。
