--- a/views/index.erb
+++ b/views/index.erb
@@ -32,6 +32,7 @@
       <div class="image">
         <img src="/assets/images/logo_white.webp" class="logo">
         <img src="/assets/images/logo_background.gif" class="logo-gif">
+        <%# <img src="/assets/images/kari.jpg" class="logo-gif"> %>
       </div>
     </div>
 
