--- a/views/layout.erb
+++ b/views/layout.erb
@@ -26,10 +26,11 @@
     <link rel="stylesheet" href="/assets/css/reset.css">
     <link rel="stylesheet" href="/assets/css/layout.css">
     <link rel="fonr" href="/assets/fonts/def/fgm.ttf">
-    <link href="https://use.fontawesome.com/releases/v6.3.0/css/all.css" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"></script>
+    <link href="https://use.fontawesome.com/releases/v6.4.2/css/all.css" rel="stylesheet">
+    <script defer src="https://use.fontawesome.com/releases/v6.4.2/js/all.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    
     <title>NewERA- 音展2023 | トップページ</title>
   </head>
 
@@ -92,7 +93,7 @@
             <img src="/assets/images/footer2.webp" class="footer-logo">
             <div id="footer-title">第76回 音楽と展覧の会 "New ERA"</div>
             <div class="footer-icon">
-                <a href="https://twitter.com/koyo_onten2023?s=21&t=cGq-MroAXlsBhwLM7vG1lA" class="icon"><i class="fab fa-twitter fa-4x snsicon" href="https://x.com/koyo_onten2023?s=20"></i>
+                <a href="https://twitter.com/koyo_onten2023?s=21&t=cGq-MroAXlsBhwLM7vG1lA" class="icon"><i class="fa-brands fa-x-twitter snsicon"></i>
                   <span class="sns-link-text">@koyo_onten2023</span>
                 </a>
                 <a href="https://instagram.com/koyo_onten?igshid=MzMyNGUyNmU2YQ==" class="icon"><i class="fab fa-instagram fa-4x snsicon" href=""></i>
