--- a/views/timetable.erb
+++ b/views/timetable.erb
@@ -115,7 +115,11 @@
           </tr>
           <!-- 9:30 -->
           <tr>
-            <td></td>
+            <td rowspan="6" class="time-event">
+              <span class="time-start">9:30~</span>
+              <span class="time-end">~10:00</span>
+              chatGPTを使った<br>プログラミング実演
+            </td>
             <td></td>
             <td></td>
             <td></td>
@@ -133,7 +137,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -142,10 +145,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td rowspan="5" class="time-event-left">
               <span class="time-start">9:45~</span>
               <span class="time-end">~10:00</span>
@@ -162,10 +163,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -202,11 +201,7 @@
             <td></td>
           </tr>
           <tr>
-            <td rowspan="6" class="time-event-left">
-            <span class="time-start">10:15~</span>
-              <span class="time-end">~11:45</span>
-              サイバー実演<br>part1</td>
-            </td>
+            <td></td>
             <td rowspan="9" class="time-event">
               <span class="time-start">10:15~</span>
               <span class="time-end">~11:00</span>
@@ -224,6 +219,7 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">10:20~</span>
               <span class="time-end">~10:40</span>
@@ -236,9 +232,15 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <!-- 10:30 -->
           <tr>
+            <td rowspan="6" class="time-event">
+              <span class="time-start">10:30~</span>
+              <span class="time-end">~11:00</span>
+              アルゴリズム講義
+            </td>
             <td></td>
             <td></td>
             <td></td>
@@ -267,7 +269,6 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
             <td></td>
@@ -276,10 +277,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -524,7 +523,11 @@
           <!-- 13:00 -->
           <tr>
             <th rowspan="12" class="time-timel">13:00</th>
-            <td></td>
+            <td rowspan="6" class="time-event">
+              <span class="time-start">13:00~</span>
+              <span class="time-end">~13:30</span>
+              アルゴリズム講義
+            </td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:00~</span>
               <span class="time-end">~13:10</span>
@@ -541,10 +544,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td rowspan="4" class="time-event">
               <span class="time-start">13:10~</span>
@@ -560,11 +561,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td rowspan="3" class="time-event">
               <span class="time-start">13:20~</span>
               <span class="time-end">~13:35</span>
@@ -583,15 +581,10 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <!-- 13:30 -->
           <tr>
-            <td rowspan="6" class="time-event-left">
-              <span class="time-start">13:30~</span>
-              <span class="time-end">~14:00</span>
-              サイバー実演<br>part2
-            </td>
+            <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">13:30~</span>
               <span class="time-end">~13:40</span>
@@ -613,8 +606,10 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
           </tr>
           <tr>
+            <td></td>
             <td rowspan="4" class="time-event-left">
               <span class="time-start">13:40~</span>
               <span class="time-end">~14:00</span>
@@ -629,14 +624,17 @@
             <td></td>
             <td></td>
             <td></td>
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
             <td></td>
           </tr>
           <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
             <td></td>
             <td></td>
             <td></td>
@@ -645,7 +643,11 @@
           <!-- 14:00 -->
           <tr>
             <th rowspan="12" class="time-timel time-bot">14:00</th>
-            <td></td>
+            <td rowspan="6" class="time-event">
+              <span class="time-start">14:00~</span>
+              <span class="time-end">~14:30</span>
+              chatGPTを使った<br>プログラミング実演
+            </td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:00~</span>
@@ -663,10 +665,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:10~</span>
@@ -681,10 +681,8 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td rowspan="2" class="time-event">
               <span class="time-start">14:20~</span>
@@ -699,7 +697,6 @@
             <td></td>
           </tr>
           <tr>
-            <td></td>
             <td></td>
             <td></td>
             <td></td>
