--- a/views/ennniti.erb
+++ b/views/ennniti.erb
@@ -24,14 +24,14 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/kagaku.png" alt="縁日">
+         <img src="/assets/images/circle/ennniti.png" alt="縁日">
       </div>
       <h1 class="circle-name">
         縁日
       </h1>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">化学実験室</span>
+         <span class="meta-loc">世界史教室</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
