--- a/views/vr.erb
+++ b/views/vr.erb
@@ -24,16 +24,16 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/tireki.png" alt="物理部">
+         <img src="/assets/images/circle/vr.erbp" alt="物理部">
       </div>
       <p class="circle-name">
-        地歴部
+        VRジェットコースター（PC同好会）
       </p>
       <div class="circles-location">
          <span class="meta-title">開催場所：</span>
-         <span class="meta-loc">1-C</span>
+         <span class="meta-loc">生物講義室</span>
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-     <p class="circle-text">今年の地歴部では、北方四島の立体模型の設置や灘高地歴部との合同企画の展示を行います。教室には、部誌も設置します。</p>
+     <p class="circle-text"></p>
 </div>
