--- a/views/shougibu.erb
+++ b/views/shougibu.erb
@@ -24,6 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
+      <img src="/assets/images/circle/shougi.png" alt="将棋部">
       </div>
       <h1 class="circle-name">
         将棋部
