ちょっと修正

--- a/views/supuradoukoukai.erb
+++ b/views/supuradoukoukai.erb
@@ -24,7 +24,7 @@
 <div class="circle-main">
    <div class="circle-top">
       <div class="circle-images">
-         <img src="/assets/images/circle/splatoon.webp" alt="縁日">
+         <img src="/assets/images/circle/splatoon.webp" alt="スプラ同好会">
       </div>
       <h1 class="circle-name">
         スプラトゥーン同好会
