--- a/views/koukounyuusi.erb
+++ b/views/koukounyuusi.erb
@@ -35,8 +35,8 @@
          <a class="meta-button">マップ上で確認</a>
       </div>
    </div>
-   <p class="circle-text">「只今より平成三五年度甲陽学院高校入学試験を始めます。」
-
+   <p class="circle-text">「只今より平成三五年度甲陽学院高校入学試験を始めます。」<p>
+   <p class="circle-text">
    15年の歳月を経て、高校入試が一日限りの復活！！
    ご希望の教科を選んで解いていただけます！
    是非お越しください！！</p>
