--- a/views/tetudoudoukoukai.erb
+++ b/views/tetudoudoukoukai.erb
@@ -36,18 +36,18 @@
       </div>
    </div>
    <div class="circle-images">
-   <img src="/assets/images/circle/tetudou1.png">
+   <img src="/assets/images/circle/tetudou1.png" alt="鉄道同好会">
    </div>
    <p class="circle-text">昨年度に引き続き、今年度も鉄道同好会の展示があります。今年新たに高一生を迎え入れた鉄研を是非、見に来てください！</p>
    <div class="tetudou-images">
-   <img src="/assets/images/circle/tetudou2.png">
-   <img src="/assets/images/circle/tetudou3.png">
-   <img src="/assets/images/circle/tetudou4.png">
+   <img src="/assets/images/circle/tetudou2.png" alt="鉄道同好会">
+   <img src="/assets/images/circle/tetudou3.png" alt="鉄道同好会">
+   <img src="/assets/images/circle/tetudou4.png" alt="鉄道同好会">
    </div>
    <div class="tetudou-images">
-   <img src="/assets/images/circle/tetudou5.png">
-   <img src="/assets/images/circle/tetudou6.png">
-   <img src="/assets/images/circle/tetudou7.png">
+   <img src="/assets/images/circle/tetudou5.png" alt="鉄道同好会">
+   <img src="/assets/images/circle/tetudou6.png" alt="鉄道同好会">
+   <img src="/assets/images/circle/tetudou7.png" alt="鉄道同好会">
    </div>
    <p class="tetudou-text">展示内容</p>
    <p class="circle-text">鉄道模型レイアウト</p>
